auth-service/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: foxt451/mcsvc_auth_service:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /app/build/helpers/keys
              name: auth-enckeys
              readOnly: true
      volumes:
        - name: auth-enckeys
          secret:
            secretName: auth-enckeys-secret
            items:
              - key: PUBLIC_KEY
                path: public.txt
              - key: PRIVATE_KEY
                path: private.txt
